--- a/src/components/Item/ItemSideArticleCredit.module.css
+++ b/src/components/Item/ItemSideArticleCredit.module.css
@@ -1,7 +1,7 @@
 
 .section_container_credit {
   margin: 1rem 0;
-  background-color: #554971;
+  background-color: var(--secondary-color);
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   padding: 10px 1rem;
@@ -10,7 +10,7 @@
 
 .section_container_credit > header {
   padding: 10px 0;
-  color: #fff;
+  color: var(--primary-text-color);
 }
 
 .credit_wrapper {
@@ -19,7 +19,7 @@
 
 .credit_input > label {
   display: block;
-  color:#fff;
+  color:var(--primary-text-color);
   padding: 0.5rem 0;
 }
 
@@ -72,7 +72,7 @@
 }
 .bankWrapper > h6 {
   padding: 10px 0;
-  color:#fff;
+  color:var(--primary-text-color);
 }
 
 .bankWrapper_List {
