--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,8 +1,8 @@
 .small-button {
   border: none;
   border-radius: 5px;
-  background-color: #554971;
-  color: #fff;
+  background-color: var(--secondary-color);
+  color: var(--primary-text-color);
   transition: all 0.3s ease 0s;
   width: 40px;
   height: 40px;
@@ -13,17 +13,17 @@
 }
 
 .small-button:hover {
-  color: #daa520;
-  background-color: #36213e;
+  color: var(--tertiary-text-color);
+  background-color: var(--tertiary-color);
 }
 .small-button:active {
   background-color: #051034;
   transform: scale(0.8, 0.8);
   transition: 0.15s;
-  box-shadow: 0 0 2px 6px #daa520;
+  box-shadow: 0 0 2px 6px var(--tertiary-text-color);
 }
 
 .small-button:disabled {
-  background-color: #57555e;
-  border: 2px solid black;
+  background-color: var(--disabled);
+  border: 2px solid var(--secondary-text-color);
 }
