--- a/src/components/Item/ItemPhotos.module.css
+++ b/src/components/Item/ItemPhotos.module.css
@@ -1,6 +1,6 @@
 .container_photos_bigPhoto {
   height: 518px;
-  background-color: #f5f8fb;
+  background-color: var(--text-background);
   border-radius: 5px;
   position: relative;
   cursor:-webkit-zoom-in;
@@ -36,9 +36,9 @@
   height: 2rem;
   margin: 10px 10px;
   border-radius: 50%;
-  border: 2px solid white;
-  background-color: #554971;
-  color: white;
+  border: 2px solid var(--article);
+  background-color: var(--secondary-color);
+  color: var(--article);
   transition: all 0.3s ease 0s;
   vertical-align: middle;
   font-weight: 600;
@@ -53,16 +53,16 @@
 .container_photos_bigPhoto_arrowPrev > svg,
 .container_photos_bigPhoto_arrowNext > svg {
   transition: all 0.3s ease 0s;
-  color: white;
+  color: var(--article);
 }
 .container_photos_bigPhoto_arrowPrev:hover,
 .container_photos_bigPhoto_arrowNext:hover {
-  border: 2px solid #daa520;
+  border: 2px solid var(--tertiary-text-color);
 }
 
 .container_photos_bigPhoto_arrowPrev:hover svg,
 .container_photos_bigPhoto_arrowNext:hover svg {
-  color: #daa520;
+  color: var(--tertiary-text-color);
 }
 
 .container_photos_bigPhoto_arrowPrev:active > svg,
@@ -73,12 +73,12 @@
 
 .container_photos_bigPhoto_arrowPrev:active,
 .container_photos_bigPhoto_arrowNext:active {
-  background-color: #36213e;
+  background-color: var(--tertiary-color);
 }
 .container_photos_bigPhoto_arrowPrev:disabled,
 .container_photos_bigPhoto_arrowNext:disabled {
-  background-color: #57555e;
-  border: 2px solid black;
+  background-color: var(--disabled);
+  border: 2px solid var(--secondary-text-color);
 }
 
 .container_photos_thumbnails {
@@ -86,7 +86,7 @@
   width: 100%;
   margin: 1rem 0;
   position: relative;
-  background-color: rgba(245, 248, 251, 1);
+  background-color: var(--text-background);
   border-radius: 5px;
 }
 
@@ -108,12 +108,12 @@
   cursor: pointer;
   list-style: none;
   margin: 0 12px 0 12px;
-  background-color: rgba(201, 201, 201, 0.5);
+  background-color: #c9c9c980;
   position: relative;
 }
 
 .selected {
-  box-shadow: 0 0 2px 8px #daa520;
+  box-shadow: 0 0 2px 8px var(--tertiary-text-color);
 }
 
 .thumbnails > li > img {
