--- a/src/components/Item/ItemRealtorData.module.css
+++ b/src/components/Item/ItemRealtorData.module.css
@@ -1,11 +1,11 @@
 .section_header {
   border-radius: 5px 5px 0 0;
   padding: 10px 1rem;
-  background-color: #fff;
+  background-color: var(--article);
 }
 
 .section_header > h2 {
-  color: #000;
+  color: var(--secondary-text-color);
   display: flex;
   justify-content: center;
 }
