--- a/src/components/List.module.css
+++ b/src/components/List.module.css
@@ -7,7 +7,7 @@
   display: flex;
   height: 60px;
   align-items: center;
-  background-color: #554971;
+  background-color: var(--secondary-color);
 }
 .section__options > div {
   margin: 0 10px;
