--- a/src/components/SignUp.module.css
+++ b/src/components/SignUp.module.css
@@ -20,7 +20,7 @@
   color: white;
   width: 400px;
   border-radius: 5px;
-  background-color: #554971;
+  background-color: var(--secondary-color);
   padding: 1.25rem;
   box-shadow: 2px 2px 2px 2px rgb(0 0 0 / 20%);
 }
@@ -59,7 +59,7 @@
   font-size: larger;
 }
 .authentication_button:hover {
-  box-shadow: 0 0 2px 2px #daa520;
+  box-shadow: 0 0 2px 2px var(--tertiary-text-color);
   transition: all 0.3s ease 0s;
 }
 
@@ -110,7 +110,7 @@
   outline: none;
 }
 .inputText:focus {
-  outline: solid #daa520;
+  outline: solid var(--tertiary-text-color);
 }
 
 .inputTextError {
@@ -161,17 +161,17 @@
 
 .submit:hover {
   background-color: #36213e;
-  color: #daa520;
-  box-shadow: 0 0 2px 2px #daa520;
+  color: var(--tertiary-text-color);
+  box-shadow: 0 0 2px 2px var(--tertiary-text-color);
 }
 
 .submit:active {
-  background-color: #051034;
-  color: #daa520;
-  box-shadow: 0 0 2px 8px #daa520;
+  background-color: var(--quaternary-color);
+  color: var(--tertiary-text-color);
+  box-shadow: 0 0 2px 8px var(--tertiary-text-color);
 }
 .submit:disabled {
-  background-color: #57555e;
+  background-color: var(--disabled);
 }
 
 .signUpBusiness_container {
@@ -179,7 +179,7 @@
   width: 400px;
   height: 100px;
   border-radius: 5px;
-  background-color: #554971;
+  background-color: var(--secondary-color);
   padding: 1.25rem;
   margin: 0.5rem;
   display: flex;
