--- a/src/components/Dropdown.module.css
+++ b/src/components/Dropdown.module.css
@@ -22,6 +22,8 @@
   height: 40px;
   border-radius: 5px 5px 0px 0px;
   text-align: center;
+  position: relative;
+  
 }
 
 .containter > ul > li {
@@ -39,6 +41,7 @@
   border-radius: 0 0 5px 5px;
   overflow-y: scroll;
   height: 200px;
+  z-index: 9;
 }
 
 .list_item {
