--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -72,7 +72,8 @@
   width: 100%;
   height: 50px;
   list-style: none;
-  display: flex;
+  display: grid;
+  grid-template-columns:repeat(3,1fr);
   align-items: center;
   user-select: none;
   border-bottom: 1px solid var(--article);
