--- a/components/Loading.module.css
+++ b/components/Loading.module.css
@@ -1,6 +1,6 @@
 .loading_container {
   width: 100%;
-  height: 800px;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,15 +12,12 @@
   user-select: none;
   font-size: x-large;
   position: absolute;
-  left: 47%;
-  top: 58%;
 }
 
 .svg {
   width: 100px;
   height: 100px;
   animation: spin 0.8s linear infinite;
-  color: var(--tertiary-color);
 }
 
 @keyframes spin {
