--- a/styles/LandingPage.module.css
+++ b/styles/LandingPage.module.css
@@ -28,9 +28,22 @@
   background-color: rgba(99, 118, 141, 1);
   border-radius: 5px;
 }
-.section_searchbar > div > label {
+
+.dropdown {
+  position: relative;
+  background-color: var(--secondary-color);
+  margin: 1rem 0;
+  border-radius: 5px;
+  width: 300px;
+  height: 80px;
+  list-style: none;
+  padding: 0 10px;
+  text-align: center;
+}
+.dropdown label {
   display: flex;
   justify-content: center;
+  
   color: white;
   padding: 5px 10px;
 }
