--- a/components/BreadCrumbs.module.css
+++ b/components/BreadCrumbs.module.css
@@ -1,40 +1,61 @@
 .breadcrumbs {
   width: 100%;
-  padding:10px 0;
+  padding: 10px 0;
   margin-top: 100px;
 }
 
-.breadcrumbs nav {
+.breadcrumbs_nav {
   margin: auto;
   width: 75%;
 }
 
-.breadcrumbs ul {
+.breadcrumbs_nav> ul {
   display: flex;
   list-style: none;
 }
 
-.breadcrumbs li {
+.breadcrumbs_nav> li {
   user-select: none;
   font-size: 24px;
 }
 
-.breadcrumbs li:hover {
+.breadcrumbs_nav>li:hover {
   text-decoration: underline var(--tertiary-text-color);
 }
 
-.breadcrumbs li:after {
+.breadcrumbs_nav> li:after {
   content: "/";
   margin: 0 10px;
   position: relative;
   vertical-align: middle;
 }
 
-.breadcrumbs li:last-child:after {
+.breadcrumbs_nav> li:last-child:after {
   content: "";
 }
 
-.breadcrumbs a:visited {
+.breadcrumbs_nav> a:visited {
   text-decoration: none;
 }
 
+@media (max-width: 800px) {
+  .breadcrumbs {
+    padding: 10px 0;
+    margin-top: 100px;
+    font-size: 20px;
+  }
+  .breadcrumbs_nav {
+    
+    width: 100%;
+    overflow-x: scroll;
+  }
+  .breadcrumbs li:after {
+      content: "/";
+  margin: 0 5px;
+  position: relative;
+  vertical-align: middle;
+}
+.breadcrumbs_nav>li:active {
+  text-decoration: underline var(--tertiary-text-color);
+}
+}
