--- a/components/Item/ItemInfoDescription.module.css
+++ b/components/Item/ItemInfoDescription.module.css
@@ -1,9 +1,9 @@
 .description_container {
-  padding: 0 2rem 10px;
+  padding: 0 40px 10px;
 }
 
 .description_container > h2 {
-  padding: 1rem 0;
+  padding: 20px 0;
 }
 
 .description_container_maps {
@@ -11,31 +11,83 @@
   padding: 0 3rem;
 }
 
-.description_wrapper{
+.description_wrapper {
   background-color: var(--text-background);
   border-radius: 5px;
-  margin: 1rem 0;
+  margin: 20px 0;
 }
 
-.description_wrapper > h3{
-  padding: 1rem 0;
+.description_wrapper > h3 {
+  padding: 20px 0;
 }
 
-.description_published{
-  padding: 1rem 0;
+.description_published {
+  padding: 20px 0;
   font-size: 16px;
 }
 
-.description_container_maps{
-    background-color: var(--text-background);
+.description_container_maps {
+  background-color: var(--text-background);
   border-radius: 5px;
-  padding: 1rem;
-    margin: 1rem 0;
-    height: 518px;
+  padding: 20px;
+  margin: 20px 0;
+  height: 518px;
 }
 
 .maps {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+}
+
+@media (max-width: 800px) {
+  .description_container {
+    padding: 0 10px 20px 10px;
+  }
+  .descriptionMobile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    margin-bottom: 20px;
+  }
+  .moreInfoClosed {
+    text-align: center;
+    user-select: none;
+    transition: rotate 0.5s ease-in-out;
+    vertical-align: middle;
+    transform: rotate(0deg);
+  }
+
+  .moreInfoOpened {
+    text-align: center;
+    user-select: none;
+    transition: rotate 0.5s ease-in-out;
+    vertical-align: middle;
+    transform: rotate(180deg);
+  }
+
+  .description_container_maps {
+    height: 200px;
+  }
+  .mobileMaps_svg {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    user-select: none;
+    background-color: var(--text-background);
+    border-radius: 5px;
+  }
+
+  .mobileMaps_svg > svg {
+    height: 140px;
+    width: 140px;
+    margin-bottom: 10px;
+  }
+  .mobileMaps_svg > *:active .mobileMaps_svg > svg:active {
+    color: var(--tertiary-text-color);
+  }
 }
