--- a/components/Item/ItemSideArticleCredit.module.css
+++ b/components/Item/ItemSideArticleCredit.module.css
@@ -1,4 +1,3 @@
-
 .section_container_credit {
   margin: 1rem 0;
   background-color: var(--secondary-color);
@@ -15,32 +14,18 @@
 
 .credit_wrapper {
   padding: 1rem 0;
+  text-align: center;
+}
+.credit_wrapper label {
+  color: var(--primary-text-color);
 }
 
-.credit_input > label {
-  display: block;
-  color:var(--primary-text-color);
-  padding: 0.5rem 0;
+.credit_input_wrapper:first-child {
+  margin: 10px 0 0 0;
 }
-
-.credit_input > label,
-.credit_input > input {
-  width: 100%;
-  height: 40px;
-  box-sizing: border-box;
-  border-radius: 5px;
-    text-align: center;
+.credit_input_wrapper:last-child {
+  margin: 10px 0 10px 0;
 }
-
-.credit_input > input[type="text"]:focus,
-.credit_input > input[type="number"]:focus {
-  outline: solid #daa520;
-}
-
-.input{
-  color:black;
-}
-
 .submit {
   vertical-align: middle;
   display: inline-block;
@@ -55,24 +40,27 @@
 }
 
 .submit:hover {
-  background-color: #36213e;
-  color: #daa520;
-  box-shadow: 0 0 2px 2px #daa520;
+  background-color: var(--tertiary-color);
+  color: var(--tertiary-text-color);
+  box-shadow: 0 0 2px 2px var(--tertiary-text-color);
 }
 
 .submit:active {
-  background-color: #051034;
-  color: #daa520;
-  box-shadow: 0 0 2px 8px #daa520;
+  background-color: var(--quaternary-color);
+  color: var(--tertiary-text-color);
+  box-shadow: 0 0 2px 8px var(--tertiary-text-color);
 }
 
+.submit:disabled {
+  background-color: var(--disabled);
+}
 
 .bankWrapper {
   padding: 1rem 0;
 }
 .bankWrapper > h6 {
   padding: 10px 0;
-  color:var(--primary-text-color);
+  color: var(--primary-text-color);
 }
 
 .bankWrapper_List {
