--- a/styles/Item.module.css
+++ b/styles/Item.module.css
@@ -20,11 +20,7 @@
 .section_item_div {
   padding: 0 2rem 0.5rem 2rem;
 }
-/*
-.section-photos header{
-    padding: 0 2rem;
-}
-*/
+
 .section_item header > div {
   padding: 0.5rem;
 }
@@ -33,12 +29,12 @@
   margin: 10px 0;
 }
 
-.section_item header > div > ul > li {
+.container_article_main_categories_list > li {
   display: inline-block;
   padding-right: 2rem;
 }
 
-.section_item header > div > ul > li > em {
+.container_article_main_categories_list > li > em {
   display: block;
 }
 
@@ -47,12 +43,12 @@
   margin: 0px 0 30px;
 }
 
-.container_article_main_categories > ul {
+.container_article_main_categories_list {
   display: flex;
   align-items: center;
 }
 
-.container_article_main_categories > ul > li {
+.container_article_main_categories_list > li {
   margin-right: 2rem;
   list-style: none;
 }
@@ -105,6 +101,8 @@
 
 .container_article_multimedia_categories > ul > div {
   margin-left: auto;
+  display: flex;
+  align-items: center;
 }
 .container_article_multimedia_categories > ul > div > span {
   margin-right: 1rem;
@@ -117,4 +115,41 @@
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
   margin: 1rem 20px;
+}
+
+@media (max-width: 800px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .container_article_main {
+    width: 100%;
+  }
+  .section_item_div {
+    padding: 0 10px 20px 10px;
+  }
+  .container_article_main_categories {
+    width: 300px;
+  }
+  .container_article_main_categories_list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .container_article_main_categories_list > li {
+    margin: 5px 0;
+    font-size: 16px;
+  }
+
+  .addToFavorites {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+  }
+  .addToFavorites > * {
+    margin: 0 5px;
+  }
 }
