--- a/components/Item/ItemPhotos.module.css
+++ b/components/Item/ItemPhotos.module.css
@@ -130,33 +130,144 @@
 }
 
 @media (max-width: 800px) {
-  .container_photos_bigPhoto {
-    height: 200px;
-    background-color: blueviolet;
-  }
-  .container_photos_bigPhoto > img {
-    height: 200px;
-    background-color: aqua;
-  }
   .mobile_gallery {
-overflow-x: scroll;
-  display: flex;
-  white-space: nowrap;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    display: flex;
+    white-space: nowrap;
+    scroll-snap-type: x mandatory;
+    height: 300px;
+    background-color: var(--text-background);
+    border-radius: 5px;
+    padding: 10px 0;
+    position: relative;
   }
 
-  .mobile_gallery_img {
-    object-fit: contain;
-    position: absolute;
+  .mobile_gallery_more {
+    list-style: none;
+  }
+  .mobile_gallery_image_wrapper {
+    width: 300px;
+    height: 100%;
+    margin: 0 10px;
+  }
+
+  .mobile_gallery_image {
+    width: 300px;
+    height: 100%;
+    object-fit: cover;
+    margin: 0 10px 0 10px;
+    scroll-snap-align: center;
+  }
+  .mobile_gallery_more:last-child > div > img {
+    height: 280px;
+  }
+  .mobile_gallery_image_unique_wrapper {
+    position: relative;
+  }
+  .mobile_gallery_custom_element {
     top: 0;
     left: 0;
-    bottom: 0;
-    right: 0;
-    margin: 0 auto;
-    height: 100%;
-    width: 100%;
+    position: absolute;
+    background-color: var(--secondary-color);
+    border-radius: 5px;
+    margin: 0 10px;
+    width: 300px;
+    height: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .mobile_gallery_more > * {
+    margin: 0 5px 10px 5px;
+  }
+  .mobile_gallery_image_unique_wrapper > *:active {
+    color: var(--tertiary-text-color);
   }
   .mobile_gallery_more {
-    width: 300px;
- height: 200px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    user-select: none;
+    letter-spacing: 1.5px;
+    font-size: 25px;
+    color: var(--primary-text-color);
+  }
+  .mobile_gallery_more > svg {
+    width: 40px;
+    height: 40px;
+    color: var(--primary-text-color);
+  }
+  .mobile_gallery_more_info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 1.5px;
+  }
+
+  .mobile_grid_gallery_nav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100px;
+    width: 100%;
+    background-color: var(--secondary-color);
+    z-index: 9999;
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+  }
+  .mobile_grid_gallery_nav_title {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    color: var(--primary-text-color);
+  }
+  .mobile_grid_gallery_exit {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+    border-radius: 5px;
+    background-color: var(--tertiary-color);
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+  }
+  .mobile_grid_gallery_exit > svg {
+    color: var(--primary-text-color);
+    height: 40px;
+    width: 40px;
+  }
+
+  .mobile_grid_gallery_section {
+    position: fixed;
+    margin-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9998;
+    background-color: var(--article);
+  }
+  .mobile_grid_gallery {
+    width: 100%;
+    height: 100%;
+    background-color: aqua;
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 1rem;
+    gap: 1rem;
+  }
+  .mobile_grid_gallery_item {
+    object-fit: cover;
+    aspect-ratio: 4/3;
   }
 }
