--- a/components/List.module.css
+++ b/components/List.module.css
@@ -19,3 +19,13 @@
   flex-direction: column;
   align-items: center;
 }
+
+.list__container > li {
+  margin: 10px 0;
+}
+.list__container > li:first-child {
+  margin: 20px 0 10px 0;
+}
+.list__container > li:last-child {
+  margin: 10px 0 20px 0;
+}
