--- a/components/ListItemMobile.module.css
+++ b/components/ListItemMobile.module.css
@@ -5,45 +5,92 @@
 .grid_container {
   width: 300px;
   height: 400px;
-  background-color: aqua;
+
   border-radius: 16px;
   box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
   display: grid;
+  background-color: var(--article);
   grid-template-areas:
     "image"
     "description";
 }
 
 .grid_img {
-    height: 200px;
+  height: 200px;
   grid-area: image;
   object-fit: cover;
-  background-color: blue;
+  background-color: bisque;
   border-radius: 16px 16px 0 0;
 }
 
 .grid_description {
   width: 300px;
-  height:200px;
+  height: 200px;
   display: grid;
-  grid-template-areas:
-    "category category category areaPrice"
-    "title title title price"
-    "detail_1 detail_2 detail_3 detail_4"
-    "none none none favorite";
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: 30% 40% 15% 15%;
 }
 .grid_description_category {
-  grid-area: category category category;
+  grid-column: 1/3;
+  grid-row: 1;
   font-size: 16px;
+  font-weight: 500;
+  padding-left: 10px;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid var(--secondary-color);
+  color: var(--secondary-text-color);
+}
+
+.grid_description_price {
+  grid-column: 3/5;
+  grid-row: 1;
+  border-top: 1px solid var(--secondary-color);
+  font-size: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  padding-right: 10px;
+  justify-content: center;
+  color: var(--secondary-text-color);
+}
+.grid_description_price > h3 {
+  font-size: 18px;
 }
 
 .grid_description_title {
-  grid-area: title title title;
   font-size: 20px;
+
+  grid-column: 1/5;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
 }
-.grid_description_price {
-  grid-area: price;
+
+.grid_description_details {
+  display: flex;
+  grid-column: 1/4;
+  grid-row: 3/5;
+
+  align-items: center;
+  justify-content: center;
 }
-.grid_description_areaPrice {
-  grid-area: areaPrice;
+.grid_description_details_child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+}
+
+.grid_description_details_child > p {
+  font-size: 14px;
+}
+
+.grid_description_favoriteButton {
+  grid-column: 4/5;
+  grid-row: 3/5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
