--- a/components/Pagination.module.css
+++ b/components/Pagination.module.css
@@ -6,7 +6,7 @@
   background: linear-gradient(#fff, rgba(99, 118, 141, 1));
 }
 
-.pagination__list >li {
+.pagination__list > li {
   display: inline-flex;
   align-items: center;
   vertical-align: middle;
@@ -19,11 +19,11 @@
   margin: 10px 10px;
   border-radius: 50%;
   border: 2px solid white;
-  background-color: #554971;
+  background-color: var(--secondary-color);
   color: white;
   transition: all 0.3s ease 0s;
   vertical-align: middle;
-  font-weight:600;
+  font-weight: 600;
   cursor: pointer;
   user-select: none;
   display: flex;
@@ -37,11 +37,11 @@
 }
 .pagination__list_btn:hover,
 .pagination__list_btn:hover svg {
-  color: var(--tertiary-color);
+  color: var(--tertiary-text-color);
 }
 
 .pagination__list_btn:hover {
-  border: 2px solid var(--tertiary-color);
+  border: 2px solid var(--tertiary-text-color);
 }
 
 .pagination__list_btn:disabled {
@@ -50,9 +50,9 @@
 }
 
 .pagination__list > li:nth-child(2),
-.pagination__list > li:nth-child(4){
-    font-weight: 900;
-     user-select: none;
+.pagination__list > li:nth-child(4) {
+  font-weight: 900;
+  user-select: none;
 }
 
 .pagination__list > li:nth-child(1) button:nth-child(1),
@@ -93,6 +93,6 @@
 .pagination__list > li:nth-child(3) button:nth-child(2):active,
 .pagination__list > li:nth-child(3) button:nth-child(4):active,
 .pagination__list > li:nth-child(3) button:nth-child(3):active {
-  transform: scale(0.8, 0.8);
+  transform: scale(0.8, 0.8) ;
   transition: 0.15s;
 }
