--- a/components/Card.module.css
+++ b/components/Card.module.css
@@ -13,6 +13,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    text-align: justify;
 }
 
 .card_svg>svg{
@@ -43,3 +44,9 @@
     color:var(--article);
 }
 
+@media (max-width: 800px){
+    .card_section_item{
+        width: 300px;
+    
+    }
+}
