--- a/components/UserInterface.module.css
+++ b/components/UserInterface.module.css
@@ -157,6 +157,8 @@
   transition: all 0.3s ease 0s;
   font-weight: bold;
   color: var(--primary-text-color);
+  text-align: center;
+   user-select: none;
 }
 .submit:disabled {
   background-color: var(--disabled);
@@ -205,4 +207,29 @@
 
 .signup:hover {
   color: var(--tertiary-text-color);
+}
+.loggedIn_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+ 
+}
+
+.loggedIn_email {
+  color: var(--primary-text-color);
+}
+.loggedIn_logOut {
+  text-align: center;
+}
+
+.profilePicture {
+  border-radius: 50%;
+  width: 4rem;
+  height: 4rem;
+  object-fit: cover;
+  background-color: aqua;
 }
