--- a/components/UserInterface.module.css
+++ b/components/UserInterface.module.css
@@ -124,11 +124,20 @@
   position: relative;
 }
 .svg {
-  color: black;
+  color: var(--secondary-text-color);
   position: absolute;
   box-sizing: border-box;
   top: 50%;
   left: 6px;
+  transform: translateY(-50%);
+}
+
+.svgPassword {
+  color: var(--secondary-text-color);
+  position: absolute;
+  box-sizing: border-box;
+  top: 50%;
+  right: 6px;
   transform: translateY(-50%);
 }
 
@@ -158,7 +167,7 @@
   font-weight: bold;
   color: var(--primary-text-color);
   text-align: center;
-   user-select: none;
+  user-select: none;
 }
 .submit:disabled {
   background-color: var(--disabled);
@@ -216,7 +225,6 @@
   width: 100%;
   height: 100%;
   padding: 10px;
- 
 }
 
 .loggedIn_email {
