--- a/components/Dropdown.module.css
+++ b/components/Dropdown.module.css
@@ -23,7 +23,6 @@
   border-radius: 5px 5px 0px 0px;
   text-align: center;
   position: relative;
-  
 }
 
 .containter > ul > li {
@@ -39,7 +38,24 @@
   cursor: pointer;
   user-select: none;
   border-radius: 0 0 5px 5px;
-    z-index: 9;
+  z-index: 9;
+}
+
+.list_active::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 5px;
+}
+
+.list_active::-webkit-scrollbar-thumb {
+  height: 5px;
+  border-radius: 16px;
+  background-color: var(--secondary-color);
+}
+
+.list_active::-webkit-scrollbar-track {
+  border-radius: 16px;
+  background-color: rgba(0, 0, 0, 0);
 }
 
 .list_item {
