favorites made, userlogin added

--- a/src/components/List.module.css
+++ b/src/components/List.module.css
@@ -14,7 +14,7 @@
 }
 
 .list__container {
-  background-color: rgba(184, 243, 255, 0.9);
+  background-color: var(--text-background);
   display: flex;
   flex-direction: column;
   align-items: center;
