--- a/src/components/Navbar/UserInterface.module.css
+++ b/src/components/Navbar/UserInterface.module.css
@@ -86,7 +86,8 @@
   text-align: center;
   height: 100%;
 }
-.menu_list > li {
+
+.menu_list .menu_list_item {
   cursor: pointer;
   padding: 10px 0;
   display: flex;
@@ -96,10 +97,38 @@
   user-select: none;
   justify-content: center;
 }
-.menu_list > li:hover {
+
+.menu_list > a > .menu_list_item {
+  color: white;
+  text-decoration: none;
+}
+
+.menu_list > a > .menu_list_item:hover {
   color: var(--tertiary-text-color);
   transition: all 0.3s ease 0s;
 }
+
+.menu_list > a:nth-child(3) > .menu_list_item:hover ~ .notification {
+  background-color: var(--tertiary-text-color);
+}
+
+.notification {
+  background-color: var(--text-background);
+  height: 40px;
+  width: 40px;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  vertical-align: middle;
+  justify-self: center;
+  position: absolute;
+  top: 40%;
+  left: 70%;
+  transform: translate(-50%, -50%);
+}
+
 .form {
   padding: 0.5rem;
   color: var(--primary-text-color);
@@ -240,4 +269,30 @@
   height: 4rem;
   object-fit: cover;
   background-color: aqua;
+}
+
+.notLoggedIn_cointainer {
+  width: 100%;
+  height: 100%;
+  border-radius: 0 0 5px 5px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+}
+.notLoggedIn_cointainer:hover .notLoggedIn_svg .notLoggedIn_cointainer > h3 {
+  color: var(--tertiary-text-color);
+}
+.notLoggedIn_svg {
+  color: white;
+  width: 100px;
+  height: 100px;
+}
+.notLoggedIn_svg > svg {
+  width: 50px;
+  height: 50px;
+}
+.notLoggedIn_cointainer > h3 {
+  color: white;
 }
