--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -60,7 +60,18 @@
   width: 4rem;
   height: 4rem;
   object-fit: cover;
+  color:var(--article);
 }
+
+.profileNameLogged{
+  color:var(--tertiary-text-color);
+}
+
+.profileName{
+  color:var(--article);
+}
+
+
 .sidebarListWrapper {
   margin: 10px 0;
 }
@@ -70,13 +81,14 @@
 
 .sidebarList > li {
   width: 100%;
-  height: 50px;
+  height: 70px;
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   user-select: none;
   border-bottom: 1px solid var(--article);
+  text-align: center;
 }
 
 .sidebarListSvg {
@@ -84,6 +96,13 @@
   height: 30px;
   margin: 0 10px 0 15px;
   color: var(--article);
+}
+
+.sidebarListSvg_notification {
+  width: 30px;
+  height: 30px;
+  margin: 0 10px 0 15px;
+  color: var(--tertiary-text-color);
 }
 
 .sidebarList > li > p {
