deleted:    components/UserInterface.module.css 	modified:   src/components/BreadCrumbs.tsx 	modified:   src/components/CreateForm/CreateForm.module.css 	modified:   src/components/CreateForm/CreateFormDetailedInformation.tsx 	new file:   src/components/CreateForm/CreateFormDetailedInformationData.tsx 	modified:   src/components/Dropdown.module.css 	modified:   src/components/List.module.css 	modified:   src/components/List.tsx 	modified:   src/components/ListItem.module.css 	modified:   src/components/ListItem.tsx	modified:   src/components/Navbar/UserInterface.module.css 	modified:   src/components/SearchForm.module.css 	modified:   src/components/SearchForm.tsx 	new file:   src/components/SearchFormData.tsx deleted:    src/components/UserInterface.module.css 	modified:   src/index.css 	modified:   src/pages/LandingPage.tsx

--- a/src/components/CreateForm/CreateForm.module.css
+++ b/src/components/CreateForm/CreateForm.module.css
@@ -121,7 +121,7 @@
   color: var(--tertiary-text-color);
 }
 
-.svg > svg {
+.icon > svg {
   height: 80px;
   width: 80px;
   margin: 1rem;
@@ -209,7 +209,7 @@
     height: 122px;
   }
 
-  .svg > svg {
+  .icon > svg {
     height: 40px;
     width: 40px;
     margin: 10px;
