--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -1,35 +1,49 @@
-.search__form{
-  position: fixed;
-  top:100px;
-  height: 100px;
+.search__form {
+  margin-top: 100px;
+  height: 200px;
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   background-color: #8ac6d0;
   z-index: 0;
-  
+  padding: 20px;
+  display: flex;
+  align-items: center;
 }
 
-.search__form > div > ul {
+.section {
+  display: grid;
+  background-color: blueviolet;
+  width: 100%;
+  height: 100%;
+  grid-template-columns: repeat(5, 1fr) repeat(2, 100px);
+  align-items: center;
+  justify-items: center;
+}
+
+.dropdown {
+  position: relative;
+  background-color: var(--secondary-color);
+  margin: 1rem 0;
+  border-radius: 5px;
+  width: 300px;
+  height: 80px;
   list-style: none;
+  padding: 0 10px;
+  text-align: center;
+}
+.dropdown label {
+  display: flex;
+  justify-content: center;
+
+  color: white;
+  padding: 5px 10px;
 }
 
-
-.search__form_select {
-  padding: 8px;
-  margin: 0px 5px;
-  border-radius: 5px;
-}
-
-.search__form_input {
-  padding: 8px;
-  margin: 0px 5px;
-  border-radius: 5px;
+.submitButton {
+  grid-column-start: 7;
 }
 
 @media (max-width: 800px) {
-  .search__form{
-    width:100%;
+  .search__form {
+    width: 100%;
   }
 }
