--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@
   --primary-text-color: #efe7e7;
   --secondary-text-color: #141212;
   --tertiary-text-color: #daa520;
+  --box-shadow-dropdown:
+  0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+  0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+  0 12.5px 10px rgba(0, 0, 0, 0.06),
+  0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+  0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+  0 100px 80px rgba(0, 0, 0, 0.12)
+;
 }
 /*
 layout
