--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -1,4 +1,4 @@
-.search__form {
+.search_form {
   margin-top: 100px;
   height: 200px;
   width: 100%;
@@ -15,8 +15,17 @@
   width: 100%;
   height: 100%;
   grid-template-columns: repeat(5, 1fr) repeat(2, 100px);
+  grid-template-rows: 160px;
   align-items: center;
   justify-items: center;
+  position: relative;
+}
+.sectionOpened {
+  height: 200px;
+  width: 100%;
+  background-color: red;
+  display: block;
+  grid-column-start: span 8;
 }
 
 .dropdown {
@@ -30,10 +39,10 @@
   padding: 0 10px;
   text-align: center;
 }
+
 .dropdown label {
   display: flex;
   justify-content: center;
-
   color: white;
   padding: 5px 10px;
 }
@@ -46,4 +55,29 @@
   .search__form {
     width: 100%;
   }
+}
+
+.form_input_container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form_input {
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  outline: none;
+  text-align: center;
+}
+.form_input:focus {
+  outline: solid var(--tertiary-text-color);
+}
+
+.form_input_container > label {
+  padding: 5px 0;
 }
