--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -26,6 +26,11 @@
   background-color: red;
   display: block;
   grid-column-start: span 8;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  justify-items: center;
+  box-shadow: var(--box-shadow-dropdown);
 }
 
 .dropdown {
@@ -47,14 +52,26 @@
   padding: 5px 10px;
 }
 
-.submitButton {
-  grid-column-start: 7;
+.areaPrice {
+  position: relative;
+  background-color: var(--secondary-color);
+  margin: 1rem 0;
+  border-radius: 5px;
+  width: 300px;
+  height: 80px;
+  list-style: none;
+  padding: 0 10px;
+  text-align: center;
+}
+.areaPrice label {
+  display: flex;
+  justify-content: center;
+  color: white;
+  padding: 5px 10px;
 }
 
-@media (max-width: 800px) {
-  .search__form {
-    width: 100%;
-  }
+.submitButton {
+  grid-column-start: 7;
 }
 
 .form_input_container {
@@ -80,4 +97,33 @@
 
 .form_input_container > label {
   padding: 5px 0;
+}
+
+.form_div_wrapper {
+  position: relative;
+  padding: 0.5rem 0;
+}
+
+.inputText {
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  padding-left: 1.5rem;
+  border-radius: 5px;
+  transition: all 0.3s ease 0s;
+  outline: none;
+}
+
+.svg {
+  position: absolute;
+  box-sizing: border-box;
+  top: 50%;
+  left: 6px;
+  transform: translateY(-50%);
+}
+
+@media (max-width: 800px) {
+  .search__form {
+    width: 100%;
+  }
 }
