renamed:    src/components/Button.css -> src/components/Buttons/Button.css 	renamed:    src/components/Button.tsx -> src/components/Buttons/Button.tsx 	renamed:    src/Buttons/ButtonExit.module.css -> src/components/Buttons/ButtonExit.module.css 	renamed:    src/Buttons/ButtonExit.tsx -> src/components/Buttons/ButtonExit.tsx 	new file:   src/components/Buttons/Buttons/ButtonExit.tsx 	renamed:    src/components/DarkThemeButton.module.css -> src/components/Buttons/DarkThemeButton.module.css 	renamed:    src/components/DarkThemeButton.tsx -> src/components/Buttons/DarkThemeButton.tsx 	modified:   src/components/Footer.module.css 	modified:   src/components/FullscreenModal.tsx 	modified:   src/components/Item/ItemInfoDescription.tsx 	renamed:    src/components/Table.module.css -> src/components/Item/Table.module.css 	renamed:    src/components/Table.tsx -> src/components/Item/Table.tsx 	modified:   src/components/ListItem.tsx 	modified:   src/components/Pagination.module.css 	modified:   src/components/SearchForm.tsx 	modified:   src/pages/LandingPage.tsx

--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
   width: 100%;
-  background-color: rgba(99, 118, 141, 1);
+  background-color:var(--primary-color);
   display: block;
   bottom: 0;
   padding: 2rem 6rem;
