--- a/src/components/Pagination.module.css
+++ b/src/components/Pagination.module.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background: linear-gradient(#fff, rgba(99, 118, 141, 1));
+  background: linear-gradient(var(--text-background), var(--primary-color));
 }
 
 .pagination__list > li {
@@ -93,6 +93,6 @@
 .pagination__list > li:nth-child(3) button:nth-child(2):active,
 .pagination__list > li:nth-child(3) button:nth-child(4):active,
 .pagination__list > li:nth-child(3) button:nth-child(3):active {
-  transform: scale(0.8, 0.8) ;
+  transform: scale(0.8, 0.8);
   transition: 0.15s;
 }
